added week2 to nav docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,3 +36,7 @@ nav:
                 - Questions: week1_questions.md
                 - Practise: week1_practise.md
                 - Concepts: week1_concepts.md
+        - Week 2:
+                - Book ex.: week2_book.md
+                - Questions: week2_questions.md
+                - Concepts: week2_concepts.md
