--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,5 +65,5 @@ nav:
                 - Questions: week8_questions.md
                 - Concepts: week8_concepts.md
         - IP suite: ip_suite.md
+        - Calculations: calculations.md                  
         - Glossary: glossary.md 
-                  
