--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Data Communication
+site_name: Networking
 theme:
         name: material
         palette:
@@ -31,39 +31,11 @@ markdown_extensions:
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_CHTML
 nav:
-        - Week 1:
-                - Book ex.: week1_book.md
-                - Questions: week1_questions.md
-                - Practise: week1_practise.md
-                - Concepts: week1_concepts.md
-        - Week 2:
-                - Book ex.: week2_book.md
-                - Questions: week2_questions.md
-                - Concepts: week2_concepts.md
-        - Week 3:
-                - Book ex.: week3_book.md
-                - Questions: week3_questions.md
-                - Concepts: week3_concepts.md
-        - Week 4:
-                - Book ex.: week4_book.md
-                - Questions: week4_questions.md
-                - Concepts: week4_concepts.md
-        - Week 5:
-                - Book ex.: week5_book.md
-                - Questions: week5_questions.md
-                - Concepts: week5_concepts.md
-        - Week 6:
-                - Book ex.: week6_book.md
-                - Questions: week6_questions.md
-                - Concepts: week6_concepts.md
-        - Week 7:
-                - Book ex.: week7_book.md
-                - Questions: week7_questions.md
-                - Concepts: week7_concepts.md
-        - Week 8:
-                - Book ex.: week8_book.md
-                - Questions: week8_questions.md
-                - Concepts: week8_concepts.md
-        - IP suite: ip_suite.md
-        - Calculations: calculations.md                  
-        - Glossary: glossary.md 
+        - About: index.md
+        - Introduction: introduction.md
+        - Application layer: application.md
+        - Transport layer: transport.md
+        - Network layer: network.md
+        - Calculations: calculations.md 
+        - Practice:
+                - Traceroute: practice_traceroute.md          
